# argus

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  go.mod  go.sum  sqlc.yaml
api/cmd/api/: main.go
api/cmd/migrate/: main.go
api/db/queries/: recommendations.sql  signals.sql  users.sql
api/internal/config/: config.go
api/internal/handler/: recommendations.go  signals.go  users.go
api/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_momentum_budget.down.sql  000002_momentum_budget.up.sql
docs/superpowers/plans/: 2026-05-31-argus-phase1-foundation.md  2026-05-31-argus-phase2-frontend.md
scraper/: .env.example  Dockerfile  capture_cookies.py  pyproject.toml
scraper/argus_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scraper/scraper/: analyzer.py  arctic_shift.py  config.py  halal_screen.py  models.py  pullpush.py  recommender.py  reddit.py  rss.py  run_analyze.py  seeking_alpha.py  stocktwits.py  twitter.py  twitter_cookies.json  velocity.py  worker.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(app)/: layout.tsx
web/app/(app)/avoid/: page.tsx
web/app/(app)/chat/: page.tsx
web/app/(app)/dashboard/: client.tsx  page.tsx
web/components/: breaking-signals-panel.tsx  hidden-gems-panel.tsx  price-chart.tsx  providers.tsx  recommendation-row.tsx  recommendation-table.tsx  sidebar.tsx
web/components/ui/: sentiment-bar.tsx  signal-card.tsx  stat-card.tsx  ticker-badge.tsx  trust-badge.tsx
web/lib/: api.ts
(+13 files in other folders)
