[project]
name = "argus-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "praw>=7.7",
  "playwright>=1.44",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "pydantic>=2.7",
  "asyncpg>=0.29",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "lxml>=5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
twitter = ["twikit>=2.0"]
